--- a/html-css/desafios/modulo-1/d009/style.css
+++ b/html-css/desafios/modulo-1/d009/style.css
@@ -1,7 +1,14 @@
 @charset "UTF8";
 
+.container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 body {
     background-color: black;
+    
 }
 
 h1 {
