--- a/html-css/desafios/modulo-2/d010/estilos.css
+++ b/html-css/desafios/modulo-2/d010/estilos.css
@@ -46,6 +46,7 @@ header > div > h4 {
 
 nav {
     background-color: var(--cor4);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.553);
 }
 
 nav > a {
