--- a/html-css/desafios/modulo-2/d010/estilos.css
+++ b/html-css/desafios/modulo-2/d010/estilos.css
@@ -69,25 +69,81 @@ main {
 
 main > article > h1 {
     margin-top: 0;
+    padding-top: 13px;
+    font-size: 2em;
     font-family: 'idroid';
     color: var(--cor4);
 }
 
 main > article > h3 {
     font-family: 'idroid';
+    font-size: 1.5em;
     color: var(--cor4);
     background-image: linear-gradient(to right, var(--cor0), white);
 }
 
 main > article > p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonte0);
+    text-align: justify;
+    font-size: 1.3em;
 }
 
 main > article > p > strong {
-    color: #1A5C37;
+    color: var(--cor4);
+}
+
+main > article > p > a {
+    color: var(--cor4);
+    text-decoration: none;
+}
+
+main > article > aside {
+    background-color: var(--cor0);
+    border-radius: 10px;
+    max-width: 900px;
+    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.296);
+}
+
+main > article > aside > h4 {
+    background-color: var(--cor3);
+    font-family: var(--fonte2);
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px;
+    margin-bottom: 0px;
+}
+
+main > article > aside > p {
+    font-family: var(--fonte0);
+    padding: 10px;
+    margin-top: 5px;
+    text-align: justify;
+    font-size: 1.3em;
+}
+
+main > article > aside > ol {
+    columns: 2;
+    font-size: 1.3em;
+    font-family: var(--fonte0);
+    list-style-position: inside;
+    list-style-type: '\2714\0020\0020';
+}
+
+main > article > aside > p > a {
+    color: var(--cor4);
+    text-decoration: none;
 }
 
 footer {
     text-align: center;
     width: 100%;
+    color: white;
+    font-family: var(--fonte0);
+    background-color: var(--cor5);
+}
+
+footer > p {
+    margin: 0px;
+    margin-top: 15px;
+    padding: 10px 100px;
 }
