--- a/html-css/desafios/modulo-2/d010/estilos.css
+++ b/html-css/desafios/modulo-2/d010/estilos.css
@@ -41,11 +41,14 @@ header > div > h4 {
     font-family: var(--fonte0);
     font-weight: 100;
     text-align: center;
+    font-size: 1.3em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.538);
 }
 
 nav {
     background-color: var(--cor4);
+    font-size: 1.3em;
+
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.553);
 }
 
@@ -64,28 +67,46 @@ main {
     margin: 0 auto;
     margin-top: 1.3px;
     box-shadow: 0px 0px 10px black;
-    padding: 13px;
+    padding-bottom: 13px;
+    padding-top: 13px;    
+    min-width: 400px;
+    max-width: 800px;
+}
+
+main > article > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 main > article > h1 {
     margin-top: 0;
-    padding-top: 13px;
     font-size: 2em;
     font-family: 'idroid';
     color: var(--cor4);
+    margin: 15px 13px 0px 13px;
 }
 
 main > article > h3 {
     font-family: 'idroid';
     font-size: 1.5em;
     color: var(--cor4);
+    margin: 15px 13px 0px 13px; 
     background-image: linear-gradient(to right, var(--cor0), white);
+}
+
+main > article > div > img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0px 20px;
 }
 
 main > article > p {
     font-family: var(--fonte0);
     text-align: justify;
     font-size: 1.3em;
+    margin: 30px 20px;
 }
 
 main > article > p > strong {
@@ -97,11 +118,18 @@ main > article > p > a {
     text-decoration: none;
 }
 
+main > article > div > iframe {
+    background-color: #063D1E;
+    padding: 20px 60px;
+}
+
 main > article > aside {
     background-color: var(--cor0);
     border-radius: 10px;
     max-width: 900px;
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.296);
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
 main > article > aside > h4 {
