--- a/html-css/desafios/modulo-2/d010/estilos.css
+++ b/html-css/desafios/modulo-2/d010/estilos.css
@@ -20,6 +20,16 @@
     background-image: linear-gradient(var(--cor2), var(--cor4));
 }
 
+div.video {
+    position: relative;
+    background-color: var(--cor4);
+    height: 0px;
+    margin-left: 0;
+    margin-right: 0px;
+    margin-bottom: 15px;
+    padding-bottom: 59%;
+}
+
 body {
     background-color: var(--cor1);
     margin: 0px;
@@ -77,7 +87,6 @@ main > article > div {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 main > article > h1 {
@@ -93,6 +102,7 @@ main > article > h3 {
     font-size: 1.5em;
     color: var(--cor4);
     margin: 15px 13px 0px 13px; 
+    padding-left: 8px;
     background-image: linear-gradient(to right, var(--cor0), white);
 }
 
@@ -107,6 +117,8 @@ main > article > p {
     text-align: justify;
     font-size: 1.3em;
     margin: 30px 20px;
+    line-height: 1.5em;
+    text-indent: 30px;
 }
 
 main > article > p > strong {
@@ -118,9 +130,12 @@ main > article > p > a {
     text-decoration: none;
 }
 
-main > article > div > iframe {
-    background-color: #063D1E;
-    padding: 20px 60px;
+main > article > div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%; 
 }
 
 main > article > aside {
@@ -147,6 +162,7 @@ main > article > aside > p {
     margin-top: 5px;
     text-align: justify;
     font-size: 1.3em;
+    text-indent: 30px;
 }
 
 main > article > aside > ol {
