--- a/html-css/desafios/modulo-2/d010/estilos.css
+++ b/html-css/desafios/modulo-2/d010/estilos.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 @font-face {
     font-family: "idroid";
     src: url(fontes/idroid.otf);
@@ -21,7 +22,7 @@
 }
 
 div > .irina {
-    max-width: 95%;
+    max-width: 95%; 
     max-height: 100%;
     margin: 0px;
 
@@ -65,8 +66,8 @@ header > div > h4 {
 nav {
     background-color: var(--cor4);
     font-size: 1.3em;
-
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.553);
+    display:  flex;
 }
 
 nav > a {
@@ -75,7 +76,30 @@ nav > a {
     font-family: var(--fonte2);
     margin-left: 10px;
     text-decoration: none;
+    text-shadow: 1px 1px 1px var(--cor1);
+    padding: 8px;
+    border-radius: 3px 5px;
+    margin-right: -8px;
+    transition: linear 300ms;
+
 }
+
+nav > a:hover {
+    color: var(--cor4);
+    font-style: none;
+    font-family: var(--fonte2);
+    margin-left: 10px;
+    text-decoration: none;
+    text-shadow: 1px 1px 1px var(--cor4);
+    background-color: var(--cor2);
+    transition: linear 300ms;
+}
+
+/* 
+nav > a:mouseout {
+    background-color: var(--cor4);
+    transition: linear 300ms;
+} */
 
 main {
     border-radius: 0px 0px 8px 8px;
