--- a/html-css/desafios/modulo-2/d010/estilos.css
+++ b/html-css/desafios/modulo-2/d010/estilos.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @font-face {
     font-family: "idroid";
-    src: url(fontes/idroid.otf);
-}
+    src: url(fontes/idroid.otf) format('opentype');
+} 
 
-:root {
+:root /*Váriavel Global*/ { 
     --cor0: #c5ebd6;
     --cor1: #83E1AD;
     --cor2: #3DDC84;
@@ -59,6 +59,7 @@ header > div > h1 {
     font-family: var(--fonte1);
     text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.505);
+    letter-spacing: 4px;
 }
 
 header > div > h4 {
@@ -225,4 +226,10 @@ footer > p {
     margin: 0px;
     margin-top: 15px;
     padding: 10px 100px;
+}
+
+footer > p > a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
