--- a/html-css/exercícios/modulo-3/capitulo-20/ex023/style.css
+++ b/html-css/exercícios/modulo-3/capitulo-20/ex023/style.css
@@ -39,3 +39,9 @@ header {
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
